test/libsolidity/syntaxTests/nameAndTypeResolution/543_warn_about_address_members_on_contract_send.sol
contract C {
    function f() view public {
        this.send;
    }
}
// ----
// TypeError: (52-61): Member "send" not found or not visible after argument-dependent lookup in contract C
